Added baseplate for demo

--- a/src/assets/resources/config.json
+++ b/src/assets/resources/config.json
@@ -1,1 +1,9 @@
-{}
+{
+  "homeTitle": "DigiGoat Demo",
+  "owner": "DigiGoat",
+  "email": "rill.sized.0v@icloud.com",
+  "homeDescription": "The official demo of the DigiGoat Software",
+  "repo": "To Be Removed",
+  "menubarTitle": "DigiGoat Demo",
+  "tabTitle": "DigiGoat Demo"
+}
