--- a/src/assets/resources/config.json
+++ b/src/assets/resources/config.json
@@ -7,6 +7,7 @@
   "menubarTitle": "DigiGoat Demo",
   "tabTitle": "DigiGoat Demo",
   "analytics": {
-    "gtag": "G-ERC6X2SZYS"
+    "gtag": "G-ERC6X2SZYS",
+    "clarity": "mdl28p1iwg"
   }
 }
